--- a/src/main/resources/static/css/playlists.css
+++ b/src/main/resources/static/css/playlists.css
@@ -25,7 +25,7 @@
 }
 
 /* =========================
-   🔥 생성 버튼 (테마 맞춤)
+   🔥 생성 버튼
 ========================= */
 .create-btn{
     display:inline-flex;
