--- a/src/main/resources/static/css/search-artist.css
+++ b/src/main/resources/static/css/search-artist.css
@@ -134,7 +134,7 @@
 }
 
 /* =========================
-   Heart (System Unified)
+   Heart
 ========================= */
 .heart-btn{
     border:none;
