--- a/src/main/resources/templates/admin/admin-jamendo.html
+++ b/src/main/resources/templates/admin/admin-jamendo.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Jamendo 데이터 수집 | PeachMusic</title>
+    <title>Jamendo 데이터 수집 | PeachMusic Admin</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
