--- a/src/main/resources/templates/artist/artist-detail.html
+++ b/src/main/resources/templates/artist/artist-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title th:text="${artistName} + ' - 아티스트'">아티스트</title>
+    <title th:text="${artistName} + ' - 아티스트'">아티스트 | PeachMusic</title>
 
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
     <link rel="stylesheet" th:href="@{/css/artist-detail.css}" />
