--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login | PeachMusic</title>
+    <title>로그인 | PeachMusic</title>
 
     <!-- 공통 CSS -->
     <link rel="stylesheet" th:href="@{/css/layout.css}">
