--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up | PeachMusic</title>
+    <title>회원가입 | PeachMusic</title>
 
     <!-- 공통 CSS -->
     <link rel="stylesheet" th:href="@{/css/layout.css}">
