--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -19,7 +19,7 @@
 
             <div class="like-submenu" id="likeMenu">
                 <a href="/likes/albums">앨범</a>
-                <a href="/likes/songs">노래</a>
+                <a href="/likes/songs">음원</a>
                 <a href="/likes/artists">아티스트</a>
             </div>
 
