--- a/src/main/resources/templates/mypage/liked-songs.html
+++ b/src/main/resources/templates/mypage/liked-songs.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Liked Songs | PeachMusic</title>
+    <title>좋아요한 음원 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
@@ -15,7 +15,7 @@
 
     <section class="liked-page">
 
-        <h2 class="page-title">좋아요한 노래</h2>
+        <h2 class="page-title">좋아요한 음원</h2>
 
         <div class="liked-table">
 
