--- a/src/main/resources/templates/playlists/my-playlists.html
+++ b/src/main/resources/templates/playlists/my-playlists.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>My Playlists | PeachMusic</title>
+    <title>나의 플레이리스트 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
