--- a/src/main/resources/templates/playlists/playlist-detail.html
+++ b/src/main/resources/templates/playlists/playlist-detail.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Playlist Detail</title>
+    <title>플레이리스트 상세 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/playlist-detail.css}">
+
     <script type="module" th:src="@{/js/playlist-detail.js}" defer></script>
 </head>
 <body>
