--- a/src/main/resources/templates/song/song-detail.html
+++ b/src/main/resources/templates/song/song-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Song | PeachMusic</title>
+    <title>음원 상세 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
@@ -62,7 +62,7 @@
                 <div class="chips" id="genreChips"></div>
 
                 <div class="custom-player">
-                    <button id="detailPlayBtn" class="play-btn">▶</button>
+                    <button id="detailPlayBtn" class="play-btn" type="button" aria-label="재생">▶</button>
                 </div>
 
             </div>
