--- a/src/main/resources/templates/artist/artist-albums.html
+++ b/src/main/resources/templates/artist/artist-albums.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>앨범 전체</title>
+    <title>앨범 전체 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/layout.css" />
     <link rel="stylesheet" href="/css/artist-albums.css" />
