--- a/src/main/resources/templates/mypage/liked-artists.html
+++ b/src/main/resources/templates/mypage/liked-artists.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Liked Artists | PeachMusic</title>
+    <title>좋아요한 아티스트 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
