--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Search | PeachMusic</title>
+    <title>검색 | PeachMusic</title>
 
     <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
