--- a/src/main/resources/templates/album/album-detail.html
+++ b/src/main/resources/templates/album/album-detail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>앨범 상세 | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/album-detail.css}">
     <script th:src="@{/js/sidebar.js}" defer></script>
