--- a/src/main/resources/templates/artist/artist-detail.html
+++ b/src/main/resources/templates/artist/artist-detail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title th:text="${artistName} + ' - 아티스트'">아티스트 | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
     <link rel="stylesheet" th:href="@{/css/artist-detail.css}" />
 
