♻ refactor: 프론트엔드 수정 1. 플레이리스트의 파일선택 버튼 margin 추가

--- a/src/main/resources/static/css/playlists.css
+++ b/src/main/resources/static/css/playlists.css
@@ -232,9 +232,8 @@
 /* 파일 선택 버튼 영역 */
 .form-group input[type="file"]::file-selector-button{
     height: 36px;
-    padding: 0 14px;
     margin-right: 12px;
-
+    margin-top:5px;
     border-radius: var(--radius-md);
     border: 1px solid var(--border);
 
