♻ refactor: 인기차트 좋아요 반영

--- a/src/main/resources/templates/charts/charts.html
+++ b/src/main/resources/templates/charts/charts.html
@@ -33,6 +33,9 @@
 
         <div id="errorBox" class="chart-error hidden"></div>
 
+        <!-- ✅ 비로그인 좋아요 클릭 시 안내 (index.css 톤과 동일) -->
+        <div id="loginPopup" class="login-popup hidden">로그인이 필요한 기능입니다.</div>
+
     </section>
 </div>
 
