refactor: 프론트엔드 수정 1. 회원, 유저 용어 통일

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -22,7 +22,7 @@
             <a href="/admin/artists" class="admin-card blue">아티스트 관리</a>
             <a href="/admin/albums" class="admin-card green">앨범 관리</a>
             <a href="/admin/songs" class="admin-card orange">음원 관리</a>
-            <a href="/admin/users" class="admin-card purple">유저 관리</a>
+            <a href="/admin/users" class="admin-card purple">회원 관리</a>
             <a href="/admin/openapi/jamendo" class="admin-card">외부 음원 관리</a>
         </div>
 
